# flyingsocks

./: .gitignore  CHANGELOG  LICENSE  README.md  fast-server-install.sh  install_client.sh  install_server.sh  mk_ssl_cert.bat  mk_ssl_cert.sh  openssl-tool.bat  openssl-tool.sh  pom.xml  server_install.sh  server_update.sh
client/: README.md  pom.xml  release.xml
client/src/main/c/: CMakeLists.txt  com_lzf_flyingsocks_client_proxy_transparent_LinuxNative.h  transparent.h
client/src/main/c/transparent/: transparent.c
client/src/main/c/windows-system-proxy/: com_lzf_flyingsocks_client_proxy_http_WindowsSystemProxy.c  com_lzf_flyingsocks_client_proxy_http_WindowsSystemProxy.h
client/src/main/resources/: cnipv6.txt  config.json  config.properties  flyingsocks-cli.jks  log4j.properties  pac.txt  ssl.properties
client/src/main/resources/i18n/: swtui_en.properties  swtui_zh.properties
client/src/test/java/: Main.java
common/: pom.xml
download/: Win64OpenSSL_Light-1_1_1d.msi
management/: pom.xml
management/src/main/resources/: application-dev.yml  log4j2.xml
server/: README.md  pom.xml  release.xml
server/src/main/assembly/: assembly.xml
server/src/main/batch/: startup.bat
server/src/main/python/: setup.py
server/src/main/resources/: banner  config-example.json  config.json  config.properties  flyingsocks.jks  log4j.properties  mybatis-config.xml  server.json  user-example.json  user.json
server/src/main/shell/: config-file-tool.sh  startup.sh  stop.sh
src/test/java/: Main.java
src/test/resources/: text.txt
(+303 files in other folders)
